--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "webpack"
+		"start": "webpack serve --env port=3000",
+		"build:prod": "webpack --env mode=production",
+		"build:dev": "webpack --env mode=development"
 	},
 	"keywords": [],
 	"author": "",
@@ -13,11 +14,13 @@
 	"devDependencies": {
 		"@types/node": "^17.0.45",
 		"@types/webpack": "^5.28.5",
+		"@types/webpack-dev-server": "^4.7.2",
 		"html-webpack-plugin": "^5.5.3",
 		"ts-loader": "^9.5.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.5",
 		"webpack": "^5.89.0",
-		"webpack-cli": "^4.10.0"
+		"webpack-cli": "^4.10.0",
+		"webpack-dev-server": "^4.7.4"
 	}
 }
