--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "loki": "^0.28.1",
     "mini-css-extract-plugin": "^2.5.3",
     "react-refresh": "^0.12.0",
+    "react-refresh-typescript": "^2.0.9",
     "reg-cli": "^0.17.6",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9",
